# backend/src/features/quizzes/dto/requests/submit-quiz-attempt.dto.ts
@@ -1,0 +1,8 @@
+export interface AttemptAnswerDto {
+  questionId: string;
+  answer: number | string;
+}
+
+export interface SubmitQuizAttemptRequestDto {
+  answers: AttemptAnswerDto[];
+}
