# backend/src/features/quizzes/dto/responses/quiz-attempt.response.dto.ts
@@ -1,0 +1,7 @@
+export interface QuizAttemptResponseDto {
+  attemptId: string;
+  quizId: string;
+  userId: string;
+  score: number;
+  submittedAt: Date;
+}
